--- a/README.adoc
+++ b/README.adoc
@@ -26,7 +26,7 @@ Data Commons - Attribution (ODC-BY)] license.
 [source, bash]
 ------------------------------------------------------------------------
 sudo apt-get install git postgresql python3 python3-flask python3-pip nginx
-sudo pip install psycopg2
+sudo pip install psycopg2 flask-babelex
 ------------------------------------------------------------------------
 
 == Getting up and running ==
@@ -41,10 +41,19 @@ sudo su -c 'createdb bibliography' postgres
 git clone https://github.com/dbs/ris2web.git
 cd ris2web
 ./create_bibdb && ./sitemap_maker && ./ris2web
+pybabel compile -d translations/
 ------------------------------------------------------------------------
 
 Once `ris2web` is running, you should be able to access the site on the same
 machine using a browser pointed at http://localhost:5000.
+
+== Translating ==
+
+Pybabel is the utility used to pull out translateable text from templates/py files. Simply extract and update to put in new translations.
+
+=== A note about committing translations ===
+
+When adding new messages to messages.pot or new translations to messages.po, ALWAYS make sure to only partially stage the actual messages added. Pybabel updates a header with the date of the last message extract, so it *will* cause a merge conflict if it's staged into the commit.
 
 == Credits ==
 
