--- a/README.adoc
+++ b/README.adoc
@@ -29,6 +29,29 @@ sudo apt-get install git postgresql python3 python3-flask python3-pip nginx
 sudo pip install psycopg2 flask-babelex
 ------------------------------------------------------------------------
 
+== Installing prerequisites on Fedora 25 ==
+
+First we get the web server and database server up and running:
+
+[source, bash]
+------------------------------------------------------------------------
+sudo dnf install nginx postgresql-server
+sudo postgresql-setup --initdb --unit postgresql
+sudo systemctl start nginx 
+sudo systemctl start postgresql
+------------------------------------------------------------------------
+
+The we install the Python dependencies, and use virtualenv to avoid polluting
+the system site packages:
+
+[source, bash]
+------------------------------------------------------------------------
+sudo dnf install python3-flask python3-psycopg2 python3-virtualenv
+virtualenv-3 --system-site-packages ~/ris2web-env
+. ~/ris2web-env/bin/activate
+pip install flask-babelex
+------------------------------------------------------------------------
+
 == Getting up and running ==
 
 The following instructions should more or less enable you to get a clone
