--- a/README.adoc
+++ b/README.adoc
@@ -29,7 +29,7 @@ sudo apt-get install git postgresql python3 python3-flask python3-pip nginx
 sudo pip install psycopg2 flask-babelex
 ------------------------------------------------------------------------
 
-== Installing prerequisites on Fedora 25 ==
+== Installing prerequisites on Fedora 29 ==
 
 First we get the web server and database server up and running:
 
@@ -46,10 +46,9 @@ the system site packages:
 
 [source, bash]
 ------------------------------------------------------------------------
-sudo dnf install python3-flask python3-psycopg2 python3-virtualenv
-virtualenv-3 --system-site-packages ~/ris2web-env
-. ~/ris2web-env/bin/activate
-pip install flask-babelex
+sudo dnf install pipenv
+pipenv install
+pipenv shell
 ------------------------------------------------------------------------
 
 == Getting up and running ==
@@ -63,8 +62,9 @@ sudo su -c 'createuser -s <username>' postgres
 sudo su -c 'createdb bibliography' postgres
 git clone https://github.com/dbs/ris2web.git
 cd ris2web
-./create_bibdb && ./sitemap_maker && ./ris2web
+./create_bibdb && ./sitemap_maker
 pybabel compile -d translations/
+./ris2web
 ------------------------------------------------------------------------
 
 Once `ris2web` is running, you should be able to access the site on the same
